feat: share quarkus unsupported test scanner